fix value and buttons on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -26,28 +26,6 @@
   color: #dc3545; /* Red for negative change */
 }
 
-/* Quick Action Buttons */
-.quick-actions {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 20px;
-}
-
-.quick-actions button {
-  background-color: #3b3b5b;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 5px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.quick-actions button:hover {
-  background-color: #56568f;
-}
 
 /* Button adjustments for small screens */
 @media (max-width: 768px) {
@@ -276,8 +254,8 @@ hr.my-4 {
 
 /* Button Styles */
 .cta-buttons .btn {
-  padding: 12px 25px;
-  font-size: 1.2rem;
+  padding: 2px 10px;
+  font-size: 0.9rem;
   text-transform: uppercase;
   font-weight: bold;
   color: white;
